--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.0.3",
     "next-images": "^1.1.2",
     "nprogress": "^0.2.0",
