--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "nprogress": "^0.2.0",
     "react": "16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-spinners-kit": "^1.9.0",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "url-loader": "^2.1.0"
