--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.0.3",
     "next-images": "^1.1.2",
+    "nextjs-sitemap-generator": "^0.1.1",
     "nprogress": "^0.2.0",
     "react": "16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
